<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:paddingLeft="24dp"
        android:paddingTop="54dp"
        android:paddingRight="24dp">

        <!--logo-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/logo" />

        <!--email-->
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <!--password-->
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <!--login-->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/login" />

        <!--register-->
        <TextView
            android:id="@+id/tv_error"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:textAlignment="textStart"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="action_register"
            android:padding="12dp"
            android:text="@string/sign_up"
            android:textColor="#3F51B5"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OR"
            android:gravity="center"
            android:textColor="@color/colorPrimary"/>

        <com.google.android.gms.common.SignInButton

            android:id="@+id/sign_in_button_google"

            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" />




    </LinearLayout>
</RelativeLayout>