<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.neyesek.activity.SearchNearByPlaces">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="75dp" />

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="301dp" />

        <LinearLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:orientation="horizontal"
            android:visibility="invisible"
            tools:visibility="invisible">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="152dp"
                android:layerType="hardware"
                android:orientation="horizontal">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="149dp"
                        android:layout_height="match_parent"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/restoran"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:typeface="sans"
                        app:fontFamily="monospace" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="201dp"
                        android:layout_height="match_parent"
                        android:lineSpacingExtra="8sp"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:typeface="sans"
                        app:fontFamily="monospace" />

                </TableRow>

                <TableRow
                    android:layout_width="238dp"
                    android:layout_height="match_parent" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="201dp"
                        android:layout_height="match_parent"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/indirim"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:typeface="sans"
                        app:fontFamily="monospace" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="201dp"
                        android:layout_height="match_parent"
                        android:lineSpacingExtra="8sp"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:typeface="sans"
                        app:fontFamily="monospace" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="201dp"
                        android:layout_height="match_parent"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/kalan_sure"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:typeface="sans"
                        app:fontFamily="monospace" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="201dp"
                        android:layout_height="match_parent"
                        android:lineSpacingExtra="8sp"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:typeface="sans"
                        app:fontFamily="monospace" />
                </TableRow>
                <TableRow>
                    <Button
                        android:id="@+id/addPrevButton"
                        android:layout_width="match_parent"
                        android:layout_height="96dp"
                        android:layout_weight="0"
                        android:enabled="true"
                        android:text="Gittim"
                        android:visibility="visible"
                        tools:visibility="visible"
                        />
                    <Button
                        android:id="@+id/addFavButton"
                        android:layout_width="match_parent"
                        android:layout_height="96dp"
                        android:layout_weight="0"
                        android:enabled="true"
                        android:text="Favorilere Ekle"
                        android:visibility="visible"
                        tools:visibility="visible"
                        />




                </TableRow>
            </TableLayout>


        </LinearLayout>

        <Button
            android:id="@+id/btnFind"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_weight="0"
            android:enabled="true"
            android:onClick="onFindClick"
            android:text="Nearby Restaurants"
            android:visibility="visible"
            tools:visibility="visible" />


    </LinearLayout>
</RelativeLayout>